fix prefork
